--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-[#5A5A5A] text-[#1f2937] tracking-wide;
+    @apply bg-[#5A5A5A] text-white tracking-wide;
   }
 
   h1,
