--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+*,
+html {
+  scroll-behavior: smooth !important;
+}
+
 @layer base {
   body {
     @apply bg-[#5A5A5A] text-white tracking-wide;
